// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> disables the prev button and enables the next button on the first page 1`] = `
<div>
  <div
    class="PaginationStyles-sc-aduuar-0 cnxjRn"
    data-testid="pagination"
  >
    <a
      aria-disabled="true"
      href="/products/0"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-left-long fa-icon"
        data-icon="left-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 256C512 273.7 497.7 288 480 288H160.1l0 72c0 9.547-5.66 18.19-14.42 22c-8.754 3.812-18.95 2.077-25.94-4.407l-112.1-104c-10.24-9.5-10.24-25.69 0-35.19l112.1-104c6.992-6.484 17.18-8.218 25.94-4.406C154.4 133.8 160.1 142.5 160.1 151.1L160.1 224H480C497.7 224 512 238.3 512 256z"
          fill="currentColor"
        />
      </svg>
      Prev
    </a>
    <p>
      Page 
      1
       of 
      3
    </p>
    <p>
      6
       Item
      s
       Total
    </p>
    <a
      aria-disabled="false"
      href="/products/2"
    >
      Next
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-right-long fa-icon"
        data-icon="right-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504.3 273.6l-112.1 104c-6.992 6.484-17.18 8.218-25.94 4.406c-8.758-3.812-14.42-12.45-14.42-21.1L351.9 288H32C14.33 288 .0002 273.7 .0002 255.1S14.33 224 32 224h319.9l0-72c0-9.547 5.66-18.19 14.42-22c8.754-3.809 18.95-2.075 25.94 4.41l112.1 104C514.6 247.9 514.6 264.1 504.3 273.6z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<Pagination /> enables the prev and next buttons on the middle pages [alternate test setup] 1`] = `
<div>
  <div
    class="PaginationStyles-sc-aduuar-0 cnxjRn"
    data-testid="pagination"
  >
    <a
      aria-disabled="false"
      href="/products/1"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-left-long fa-icon"
        data-icon="left-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 256C512 273.7 497.7 288 480 288H160.1l0 72c0 9.547-5.66 18.19-14.42 22c-8.754 3.812-18.95 2.077-25.94-4.407l-112.1-104c-10.24-9.5-10.24-25.69 0-35.19l112.1-104c6.992-6.484 17.18-8.218 25.94-4.406C154.4 133.8 160.1 142.5 160.1 151.1L160.1 224H480C497.7 224 512 238.3 512 256z"
          fill="currentColor"
        />
      </svg>
      Prev
    </a>
    <p>
      Page 
      2
       of 
      3
    </p>
    <p>
      6
       Item
      s
       Total
    </p>
    <a
      aria-disabled="false"
      href="/products/3"
    >
      Next
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-right-long fa-icon"
        data-icon="right-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504.3 273.6l-112.1 104c-6.992 6.484-17.18 8.218-25.94 4.406c-8.758-3.812-14.42-12.45-14.42-21.1L351.9 288H32C14.33 288 .0002 273.7 .0002 255.1S14.33 224 32 224h319.9l0-72c0-9.547 5.66-18.19 14.42-22c8.754-3.809 18.95-2.075 25.94 4.41l112.1 104C514.6 247.9 514.6 264.1 504.3 273.6z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<Pagination /> enables the prev and next buttons on the middle pages 1`] = `
<div>
  <div
    class="PaginationStyles-sc-aduuar-0 cnxjRn"
    data-testid="pagination"
  >
    <a
      aria-disabled="false"
      href="/products/1"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-left-long fa-icon"
        data-icon="left-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 256C512 273.7 497.7 288 480 288H160.1l0 72c0 9.547-5.66 18.19-14.42 22c-8.754 3.812-18.95 2.077-25.94-4.407l-112.1-104c-10.24-9.5-10.24-25.69 0-35.19l112.1-104c6.992-6.484 17.18-8.218 25.94-4.406C154.4 133.8 160.1 142.5 160.1 151.1L160.1 224H480C497.7 224 512 238.3 512 256z"
          fill="currentColor"
        />
      </svg>
      Prev
    </a>
    <p>
      Page 
      2
       of 
      3
    </p>
    <p>
      6
       Item
      s
       Total
    </p>
    <a
      aria-disabled="false"
      href="/products/3"
    >
      Next
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-right-long fa-icon"
        data-icon="right-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504.3 273.6l-112.1 104c-6.992 6.484-17.18 8.218-25.94 4.406c-8.758-3.812-14.42-12.45-14.42-21.1L351.9 288H32C14.33 288 .0002 273.7 .0002 255.1S14.33 224 32 224h319.9l0-72c0-9.547 5.66-18.19 14.42-22c8.754-3.809 18.95-2.075 25.94 4.41l112.1 104C514.6 247.9 514.6 264.1 504.3 273.6z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<Pagination /> enables the prev button and disables the next button on the last page 1`] = `
<div>
  <div
    class="PaginationStyles-sc-aduuar-0 cnxjRn"
    data-testid="pagination"
  >
    <a
      aria-disabled="false"
      href="/products/2"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-left-long fa-icon"
        data-icon="left-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 256C512 273.7 497.7 288 480 288H160.1l0 72c0 9.547-5.66 18.19-14.42 22c-8.754 3.812-18.95 2.077-25.94-4.407l-112.1-104c-10.24-9.5-10.24-25.69 0-35.19l112.1-104c6.992-6.484 17.18-8.218 25.94-4.406C154.4 133.8 160.1 142.5 160.1 151.1L160.1 224H480C497.7 224 512 238.3 512 256z"
          fill="currentColor"
        />
      </svg>
      Prev
    </a>
    <p>
      Page 
      3
       of 
      3
    </p>
    <p>
      6
       Item
      s
       Total
    </p>
    <a
      aria-disabled="true"
      href="/products/4"
    >
      Next
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-right-long fa-icon"
        data-icon="right-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504.3 273.6l-112.1 104c-6.992 6.484-17.18 8.218-25.94 4.406c-8.758-3.812-14.42-12.45-14.42-21.1L351.9 288H32C14.33 288 .0002 273.7 .0002 255.1S14.33 224 32 224h319.9l0-72c0-9.547 5.66-18.19 14.42-22c8.754-3.809 18.95-2.075 25.94 4.41l112.1 104C514.6 247.9 514.6 264.1 504.3 273.6z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<Pagination /> renders correctly for 15 items, when on page 3 of 8 1`] = `
<div>
  <div
    class="PaginationStyles-sc-aduuar-0 cnxjRn"
    data-testid="pagination"
  >
    <a
      aria-disabled="false"
      href="/products/2"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-left-long fa-icon"
        data-icon="left-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 256C512 273.7 497.7 288 480 288H160.1l0 72c0 9.547-5.66 18.19-14.42 22c-8.754 3.812-18.95 2.077-25.94-4.407l-112.1-104c-10.24-9.5-10.24-25.69 0-35.19l112.1-104c6.992-6.484 17.18-8.218 25.94-4.406C154.4 133.8 160.1 142.5 160.1 151.1L160.1 224H480C497.7 224 512 238.3 512 256z"
          fill="currentColor"
        />
      </svg>
      Prev
    </a>
    <p>
      Page 
      3
       of 
      8
    </p>
    <p>
      15
       Item
      s
       Total
    </p>
    <a
      aria-disabled="false"
      href="/products/4"
    >
      Next
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-right-long fa-icon"
        data-icon="right-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504.3 273.6l-112.1 104c-6.992 6.484-17.18 8.218-25.94 4.406c-8.758-3.812-14.42-12.45-14.42-21.1L351.9 288H32C14.33 288 .0002 273.7 .0002 255.1S14.33 224 32 224h319.9l0-72c0-9.547 5.66-18.19 14.42-22c8.754-3.809 18.95-2.075 25.94 4.41l112.1 104C514.6 247.9 514.6 264.1 504.3 273.6z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<Pagination /> renders correctly when on page one of two 1`] = `
<div>
  <div
    class="PaginationStyles-sc-aduuar-0 cnxjRn"
    data-testid="pagination"
  >
    <a
      aria-disabled="true"
      href="/products/0"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-left-long fa-icon"
        data-icon="left-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 256C512 273.7 497.7 288 480 288H160.1l0 72c0 9.547-5.66 18.19-14.42 22c-8.754 3.812-18.95 2.077-25.94-4.407l-112.1-104c-10.24-9.5-10.24-25.69 0-35.19l112.1-104c6.992-6.484 17.18-8.218 25.94-4.406C154.4 133.8 160.1 142.5 160.1 151.1L160.1 224H480C497.7 224 512 238.3 512 256z"
          fill="currentColor"
        />
      </svg>
      Prev
    </a>
    <p>
      Page 
      1
       of 
      2
    </p>
    <p>
      4
       Item
      s
       Total
    </p>
    <a
      aria-disabled="false"
      href="/products/2"
    >
      Next
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-right-long fa-icon"
        data-icon="right-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504.3 273.6l-112.1 104c-6.992 6.484-17.18 8.218-25.94 4.406c-8.758-3.812-14.42-12.45-14.42-21.1L351.9 288H32C14.33 288 .0002 273.7 .0002 255.1S14.33 224 32 224h319.9l0-72c0-9.547 5.66-18.19 14.42-22c8.754-3.809 18.95-2.075 25.94 4.41l112.1 104C514.6 247.9 514.6 264.1 504.3 273.6z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<Pagination /> renders correctly when on page two of two 1`] = `
<div>
  <div
    class="PaginationStyles-sc-aduuar-0 cnxjRn"
    data-testid="pagination"
  >
    <a
      aria-disabled="false"
      href="/products/1"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-left-long fa-icon"
        data-icon="left-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 256C512 273.7 497.7 288 480 288H160.1l0 72c0 9.547-5.66 18.19-14.42 22c-8.754 3.812-18.95 2.077-25.94-4.407l-112.1-104c-10.24-9.5-10.24-25.69 0-35.19l112.1-104c6.992-6.484 17.18-8.218 25.94-4.406C154.4 133.8 160.1 142.5 160.1 151.1L160.1 224H480C497.7 224 512 238.3 512 256z"
          fill="currentColor"
        />
      </svg>
      Prev
    </a>
    <p>
      Page 
      2
       of 
      2
    </p>
    <p>
      4
       Item
      s
       Total
    </p>
    <a
      aria-disabled="true"
      href="/products/3"
    >
      Next
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-right-long fa-icon"
        data-icon="right-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504.3 273.6l-112.1 104c-6.992 6.484-17.18 8.218-25.94 4.406c-8.758-3.812-14.42-12.45-14.42-21.1L351.9 288H32C14.33 288 .0002 273.7 .0002 255.1S14.33 224 32 224h319.9l0-72c0-9.547 5.66-18.19 14.42-22c8.754-3.809 18.95-2.075 25.94 4.41l112.1 104C514.6 247.9 514.6 264.1 504.3 273.6z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<Pagination /> renders correctly when there's one page 1`] = `
<div>
  <div
    class="PaginationStyles-sc-aduuar-0 cnxjRn"
    data-testid="pagination"
  >
    <a
      aria-disabled="true"
      href="/products/0"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-left-long fa-icon"
        data-icon="left-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 256C512 273.7 497.7 288 480 288H160.1l0 72c0 9.547-5.66 18.19-14.42 22c-8.754 3.812-18.95 2.077-25.94-4.407l-112.1-104c-10.24-9.5-10.24-25.69 0-35.19l112.1-104c6.992-6.484 17.18-8.218 25.94-4.406C154.4 133.8 160.1 142.5 160.1 151.1L160.1 224H480C497.7 224 512 238.3 512 256z"
          fill="currentColor"
        />
      </svg>
      Prev
    </a>
    <p>
      Page 
      1
       of 
      1
    </p>
    <p>
      1
       Item
      
       Total
    </p>
    <a
      aria-disabled="true"
      href="/products/2"
    >
      Next
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-right-long fa-icon"
        data-icon="right-long"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504.3 273.6l-112.1 104c-6.992 6.484-17.18 8.218-25.94 4.406c-8.758-3.812-14.42-12.45-14.42-21.1L351.9 288H32C14.33 288 .0002 273.7 .0002 255.1S14.33 224 32 224h319.9l0-72c0-9.547 5.66-18.19 14.42-22c8.754-3.809 18.95-2.075 25.94 4.41l112.1 104C514.6 247.9 514.6 264.1 504.3 273.6z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
</div>
`;
